--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,9 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".ScreenFourActivity" />
-        <activity android:name=".SellActivity"></activity>
+        <activity android:name=".SellActivity" />
         <activity android:name=".BuyActivity" />
+        <activity android:name=".TransactionsActivity" />
     </application>
 
 </manifest>
